add z-ordering using custom priorities; small fixes